firewall.tf
resource "google_compute_firewall" "default" {
  name    = "test-firewall"
  network = google_compute_network.default.name

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["80", "8080", "1000-2000"]
  }
  
allow {
    protocol = "tcp"
	ports    = ["22", "1000-2000"]
  }
 
}
